--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -6,10 +6,10 @@ ARG JAVA_VERSION=1.8.0
 ARG JAVA_VERSION_DETAIL=${JAVA_VERSION}.191.b12
 ENV JAVA_HOME /usr/lib/jvm/java
 
-RUN yum install -y net-tools curl nc netcat perl which
 RUN yum-config-manager --enable cr && \
     yum -y --setopt=tsflags=nodocs update && \
     yum -y install java-${JAVA_VERSION}-openjdk-devel && \
+    yum -y install net-tools curl netcat which perl && \
     yum -y clean all && \
     rm -rf /var/cache/yum
 
