修改 配置文件

--- a/scripts/allocate.ini
+++ b/scripts/allocate.ini
@@ -1,30 +1,30 @@
-hosts = ""
+hosts = "alertd,cmservice,charservice,cloudwiz_user,datanode,elasticsearch,kafka,log_analysis,log_pp,log_processor,master,metric_proxy,mysql_master,namenode,nginx,opentsdb,permission,regionserver,umanager,webfront,zookeeper"
 alertd = "0"
 backupmaster = ""
-cmservice = "0"
-chartservice = "0"
-cloudwiz_user = "0"
-datanode = "0"
-elasticsearch = "0"
-hbase_thrift = "0"
+cmservice = "1"
+chartservice = "2"
+cloudwiz_user = "3"
+datanode = "4"
+elasticsearch = "5"
+hbase_thrift = ""
 jmxtrans = ""
-kafka = "0"
-log_analysis = "0"
-log_pp = "0"
-log_processor = "0"
-master = "0"
-metric_proxy = "0"
-mysql_master = "0"
+kafka = "6"
+log_analysis = "7"
+log_pp = "8"
+log_processor = "9"
+master = "10"
+metric_proxy = "11"
+mysql_master = "12"
 mysql_slave = ""
-namenode = "0"
-nginx = "0"
-oneagent = "0"
-opentsdb = "0"
-permission = "0"
-python_daemon = "0"
-regionserver = "0"
-salt = "0"
+namenode = "13"
+nginx = "14"
+oneagent = ""
+opentsdb = "15"
+permission = "16"
+python_daemon = ""
+regionserver = "17"
+salt = ""
 secondarynamenode = ""
-umanager = "0"
-webfront = "0"
-zookeeper = "0"
+umanager = "18"
+webfront = "19"
+zookeeper = "20"
