--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -33,7 +33,7 @@ agent_root = "/opt"
 platform = RedHat
 
 ; OPTIONAL:
-; host_ip = "172.16.16.100"
+host_ip = "nginx"
 nginx_port = 8080
 ; nginx_protocol = http
 
