--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,54 @@ services:
     - 80:80
     - 443:443
 
+  kafka:
+    image: wurstmeister/kafka:2.11-1.0.2
+    container_name: kafka
+    hostname: kafka
+    env_file:
+    - ./hadoop.env
+    ports:
+    - 9092:9092
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#    volumes:
+#    - kafka:/var/run/docker.sock
+    depends_on:
+    - zookeeper
+
+  metric-proxy:
+    image: cloudwiz/metric-proxy
+    container_name: metric-proxy
+    hostname: metric-proxy
+    env_file:
+    - ./hadoop.env
+    ports:
+    - 4243:4243
+    volumes:
+    - ${TAG}/metric-proxy/bin/start.sh:/opt/cloudwiz-metric-proxy/bin/start.sh
+    - ${TAG}/metric-proxy/config/application.yml:/opt/cloudwiz-metric-proxy/config/application.conf
+    - ${TAG}/metric-proxy/config/log4j.properties:/opt/cloudwiz-metric-proxy/config/log4j.properties
+#    - /opt/template/cloudwiz-metric-proxy/conf/opentsdb.conf:/opt/cloudwiz-metric-proxy/conf/application.conf
+    depends_on:
+    - kafka
+
+  opentsdb:
+    image: cloudwiz/opentsdb
+    container_name: opentsdb
+    hostname: opentsdb
+    env_file:
+    - ./hadoop.env
+    ports:
+    - 4242:4242
+    volumes:
+    - ${TAG}/opentsdb/bin/start.sh:/opt/opentsdb/start.sh
+    - ${TAG}/opentsdb/conf/opentsdb.conf:/opt/opentsdb/conf/opentsdb.conf
+    - ${TAG}/opentsdb/conf/logback.xml:/opt/opentsdb/conf/logback.xml
+    depends_on:
+    - hbase-regionserver
+#    - metric-proxy
+
 
 volumes:
   hadoop_namenode:
@@ -102,3 +150,4 @@ volumes:
   elasticsearch:
   zookeeper:
   nginx:
+  kafka:
