--- a/opentsdb/Dockerfile
+++ b/opentsdb/Dockerfile
@@ -6,7 +6,7 @@ ENV OPENTSDB_URL http://192.168.1.206:8080/package/opentsdb.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java
 
 RUN set -x \
-    && curl -fSL "$HBASE_URL" -o /tmp/opentsdb.tar.gz \
+    && curl -fSL "$OPENTSDB_URL" -o /tmp/opentsdb.tar.gz \
     && tar -xvf /tmp/opentsdb.tar.gz -C /opt/ \
     && rm /tmp/opentsdb.tar.gz*
 
