--- a/opentsdb/Dockerfile
+++ b/opentsdb/Dockerfile
@@ -8,10 +8,11 @@ ENV JAVA_HOME /usr/lib/jvm/java
 RUN set -x \
     && curl -fSL "$OPENTSDB_URL" -o /tmp/opentsdb.tar.gz \
     && tar -xvf /tmp/opentsdb.tar.gz -C /opt/ \
-    && rm /tmp/opentsdb.tar.gz*
+    && rm /tmp/opentsdb.tar.gz* \
+    && ln -s /usr/lib/jvm/java  /opt/jdk
 
 ENV USER=root
 
 EXPOSE 4242
 
-CMD ["/opt/bin/start.sh"]
+CMD ["/opt/opentsdb/bin/start.sh"]
