--- a/scripts/allocate.ini
+++ b/scripts/allocate.ini
@@ -1,13 +1,10 @@
-hosts = "alertd,cmservice,charservice,cloudwiz_user,datanode,elasticsearch,kafka,log_analysis,log_pp,log_processor,master,metric_proxy,mysql_master,namenode,nginx,opentsdb,permission,regionserver,umanager,webfront,zookeeper"
+hosts = "alertd,cmservice,charservice,cloudwiz_user,datanode,elasticsearch,kafka,log_analysis,log_pp,log_processor,hbase-master,metric-proxy,mysql-server,namenode,nginx,opentsdb,permission,hbase-regionserver,umanager,webfront,zookeeper,oneagent,python_daemon,hbase_thrift"
 alertd = "0"
-backupmaster = ""
 cmservice = "1"
 chartservice = "2"
 cloudwiz_user = "3"
 datanode = "4"
 elasticsearch = "5"
-hbase_thrift = ""
-jmxtrans = ""
 kafka = "6"
 log_analysis = "7"
 log_pp = "8"
@@ -18,13 +15,16 @@ mysql_master = "12"
 mysql_slave = ""
 namenode = "13"
 nginx = "14"
-oneagent = ""
 opentsdb = "15"
 permission = "16"
-python_daemon = ""
 regionserver = "17"
-salt = ""
-secondarynamenode = ""
 umanager = "18"
 webfront = "19"
 zookeeper = "20"
+oneagent = "21"
+python_daemon = "22"
+hbase_thrift = "23"
+jmxtrans = ""
+backupmaster = ""
+secondarynamenode = ""
+salt = ""
