--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     - ./hadoop.env
     ports:
     - 50070:50070
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.2
 
   datanode:
     image: cloudwiz/hadoop-datanode
@@ -26,6 +29,9 @@ services:
     - ./hadoop.env
     ports:
     - 50075:50075
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.3
     depends_on:
     - namenode
 
@@ -38,6 +44,9 @@ services:
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888
     ports:
     - 2181:2181
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.4
 
   hbase-master:
     image: cloudwiz/hbase-master
@@ -49,6 +58,9 @@ services:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zookeeper:2181"
     ports:
     - 16010:16010
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.5
     depends_on:
     - namenode
     - datanode
@@ -65,6 +77,9 @@ services:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zookeeper:2181 hbase-master:16010"
     ports:
     - 16030:16030
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.6
     depends_on:
     - namenode
     - datanode
@@ -82,6 +97,9 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - 3306:3306
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.7
 
   elasticsearch:
     image: elasticsearch:5.4.3
@@ -94,18 +112,56 @@ services:
     ports:
     - 9200:9200
     - 9300:9300
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.8
 
   nginx:
-    image: nginx:1.17.4
+    image: nginx:1.12.1
     container_name: nginx
     hostname: nginx
     env_file:
     - ./hadoop.env
-#    volumes:
-#    - ./nginx.conf:/etc/nginx/nginx.conf
+    volumes:
+    - ${WORK_PATH}/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+    - ${WORK_PATH}/nginx/:/log/nginx/
+    - ${WORK_PATH}/nginx/:/opt/nginx/
     ports:
     - 80:80
     - 443:443
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.9
+    extra_hosts:
+      namenode: 172.19.0.2
+      datanode: 172.19.0.3
+      zookeeper: 172.19.0.4
+      # name not the same
+      hbase-master: 172.19.0.5
+      ##master: 172.19.0.5
+      hbase-regionserver: 172.19.0.6
+      ##regionserver: 172.19.0.6
+      mysql-server: 172.19.0.7
+      ##mysql_master: 172.19.0.7
+      elasticsearch: 172.19.0.8
+      nginx: 172.19.0.9
+      kafka: 172.19.0.10
+      # name not the same
+      metric-proxy: 172.19.0.11
+      ##metric_proxy: 172.19.0.11
+      opentsdb: 172.19.0.12
+      #### No such service now 
+      alertd: 172.19.0.133 
+      cmservice: 172.19.0.144 
+      webfront: 172.19.0.155
+      log_analysis: 172.19.0.166
+      cloudwiz_user: 172.19.0.177
+      log_processor: 172.19.0.188
+      permission: 172.19.0.199
+      log_pp: 172.19.0.200
+      oneagent: 172.19.0.211
+      python_daemon: 172.19.0.222
+      hbase_thrift: 172.19.0.233
 
   kafka:
     image: wurstmeister/kafka:2.11-1.0.2
@@ -115,6 +171,9 @@ services:
     - ./hadoop.env
     ports:
     - 9092:9092
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.10
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -131,10 +190,14 @@ services:
     - ./hadoop.env
     ports:
     - 4243:4243
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.11
     volumes:
-    - ${WORK_PATH}/metric-proxy/bin/start.sh:/opt/cloudwiz-metric-proxy/bin/start.sh
-    - ${WORK_PATH}/metric-proxy/config/application.yml:/opt/cloudwiz-metric-proxy/config/application.conf
-    - ${WORK_PATH}/metric-proxy/config/log4j.properties:/opt/cloudwiz-metric-proxy/config/log4j.properties
+    - ${WORK_PATH}/startup/envs.sh:/opt/startup/envs.sh
+    - ${WORK_PATH}/metric-proxy/bin/start.sh:/opt/metric-proxy/bin/start.sh
+    - ${WORK_PATH}/metric-proxy/config/application.yml:/opt/metric-proxy/config/application.conf
+    - ${WORK_PATH}/metric-proxy/config/log4j.properties:/opt/metric-proxy/config/log4j.properties
 #    - /opt/template/cloudwiz-metric-proxy/conf/opentsdb.conf:/opt/cloudwiz-metric-proxy/conf/application.conf
     depends_on:
     - kafka
@@ -147,8 +210,12 @@ services:
     - ./hadoop.env
     ports:
     - 4242:4242
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.12
     volumes:
-    - ${WORK_PATH}/opentsdb/bin/start.sh:/opt/opentsdb/start.sh
+    - ${WORK_PATH}/startup/envs.sh:/opt/startup/envs.sh
+    - ${WORK_PATH}/opentsdb/bin/start.sh:/opt/opentsdb/bin/start.sh
     - ${WORK_PATH}/opentsdb/conf/opentsdb.conf:/opt/opentsdb/conf/opentsdb.conf
     - ${WORK_PATH}/opentsdb/conf/logback.xml:/opt/opentsdb/conf/logback.xml
     depends_on:
@@ -163,3 +230,10 @@ volumes:
   zookeeper:
   nginx:
   kafka:
+
+networks:
+  cwiz_network:
+    ipam:
+      driver: default
+      config:
+        - subnet: "172.19.0.0/24"
