--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,9 +153,9 @@ services:
       log_analysis: 172.19.0.18
       chartservice: 172.19.0.19
       log_pp: 172.19.0.20
+      oneagent: 172.19.0.21
       #### No such service now 
       alertd: 172.19.0.133 
-      oneagent: 172.19.0.211
       python_daemon: 172.19.0.222
       hbase_thrift: 172.19.0.233
 
@@ -350,6 +350,24 @@ services:
     depends_on:
     - kafka
     - opentsdb
+
+  oneagent:
+    image: cloudwiz/oneagent
+    container_name: oneagent
+    hostname: oneagent
+    networks:
+      cwiz_network:
+        ipv4_address: 172.19.0.21
+    volumes:
+    - ${WORK_PATH}/startup/envs.sh:/opt/startup/envs.sh
+    - ${WORK_PATH}/oneagent/bin/start.sh:/opt/oneagent/bin/start.sh
+    - ${WORK_PATH}/oneagent/conf/:/opt/oneagent/conf/
+    - ${WORK_PATH}/logs/oneagent/:/log/
+    depends_on:
+    - mysql-server
+    - namenode
+    - zookeeper
+    - kafka
 
 volumes:
   hadoop_namenode:
