--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,6 +128,7 @@ services:
     - ${WORK_PATH}/nginx/:/log/nginx/
     - ${WORK_PATH}/nginx/:/opt/nginx/
     ports:
+    - 8080:8080
     - 80:80
     - 443:443
     networks:
@@ -373,6 +374,8 @@ services:
     image: cloudwiz/alertd
     container_name: alertd
     hostname: alertd
+    ports:
+    - 5001:5001
     networks:
       cwiz_network:
         ipv4_address: 172.19.0.22
