--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -7,6 +7,7 @@ MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 ENV MYSQL_ROOT_PASSWORD=Cloudwiz_p0c
 
 ADD entrypoint.sh /tmp/entrypoint.sh
+ADD mysqld.cnf /etc/mysql/mysql.conf.d/mysqld.cnf
 RUN chmod a+x /tmp/entrypoint.sh
 CMD ["mysqld"]
 ENTRYPOINT ["/tmp/entrypoint.sh"]
