--- a/opentsdb/Dockerfile
+++ b/opentsdb/Dockerfile
@@ -5,6 +5,7 @@ ARG PKG_URL
 
 ENV OPENTSDB_URL ${PKG_URL:-http://download.cloudwiz.cn/package}/opentsdb.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java
+ENV USER=root
 
 RUN set -x \
     && curl -fSL "$OPENTSDB_URL" -o /tmp/opentsdb.tar.gz \
@@ -12,8 +13,9 @@ RUN set -x \
     && rm /tmp/opentsdb.tar.gz* \
     && ln -s /usr/lib/jvm/java  /opt/jdk
 
-ENV USER=root
+ADD start.sh /start.sh
+RUN chmod +x /start.sh
 
 EXPOSE 4242
 
-CMD ["/opt/opentsdb/bin/start.sh"]
+ENTRYPOINT ["/start.sh"]
